--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.SmartPhysicApplication" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+
     </style>
 
     <style name="Theme.SmartPhysicApplication" parent="Base.Theme.SmartPhysicApplication" />
+    <style name="CustomButton" parent="Widget.AppCompat.Button">
+        <item name="android:textStyle">normal</item>
+        <item name="android:textAllCaps">false</item> <!-- nếu bạn không muốn toàn chữ in hoa -->
+    </style>
 </resources>
