--- a/app/src/main/res/layout/activity_model_viewer.xml
+++ b/app/src/main/res/layout/activity_model_viewer.xml
@@ -16,6 +16,9 @@
         android:padding="12dp"
         android:background="#66000000">
         <Button
+            android:id="@+id/btnBack"
+            android:text="BACK" android:layout_height="40dp" android:layout_width="150dp"/>
+        <Button
             android:id="@+id/btnToggleCube"
             android:text="Hiện/Ẩn Cube" android:layout_height="40dp" android:layout_width="150dp"/>
         <Button
