--- a/app/src/main/res/layout/fragment_mind_map.xml
+++ b/app/src/main/res/layout/fragment_mind_map.xml
@@ -3,6 +3,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/gradient_green_background">
 
     <LinearLayout
@@ -41,40 +42,9 @@
             android:background="#CBFFE7"
             android:layout_marginBottom="25dp"/>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Hệ thống lý thuyết C1"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            android:textColor="@color/black"
-            android:textAlignment="center"
-            android:layout_marginBottom="16dp" />
-
-        <!-- Video Thumbnail Card -->
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            card_view:cardCornerRadius="16dp"
-            card_view:cardElevation="4dp"
-            android:layout_marginBottom="24dp">
-
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="0dp">
-
-                <ImageView
-                    android:id="@+id/player_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:src="@drawable/img_mindmap"
-                    />
-            </FrameLayout>
-        </androidx.cardview.widget.CardView>
-
         <!-- Lesson List -->
         <LinearLayout
+            android:id="@+id/lesson_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -92,11 +62,61 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="Hệ thống lý thuyết C1"
+                    style="@style/LessonTextStyle" />
+            </LinearLayout>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/card_lesson_1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:layout_marginBottom="24dp"
+                app:cardCornerRadius="16dp"
+                app:cardElevation="4dp">
+                <ImageView
+                    android:id="@+id/img_lesson_1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/img_mindmap_c1"/>
+            </androidx.cardview.widget.CardView>
+
+            <LinearLayout android:id="@+id/lesson_item_2"
+                style="@style/LessonItemStyle">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/circle_green800_background"
+                    android:layout_marginEnd="10dp">
+                    <ImageView style="@style/LessonArrowStyle"/>
+                </LinearLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text="Hệ thống lý thuyết C2"
                     style="@style/LessonTextStyle" />
             </LinearLayout>
 
-            <LinearLayout android:id="@+id/lesson_item_2"
+            <androidx.cardview.widget.CardView
+                android:id="@+id/card_lesson_2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:layout_marginBottom="24dp"
+                app:cardCornerRadius="16dp"
+                app:cardElevation="4dp">
+                <ImageView
+                    android:id="@+id/img_lesson_2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/img_mindmap_c2"/>
+            </androidx.cardview.widget.CardView>
+
+            <LinearLayout android:id="@+id/lesson_item_3"
                 style="@style/LessonItemStyle">
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -112,7 +132,24 @@
                     style="@style/LessonTextStyle" />
             </LinearLayout>
 
-            <LinearLayout android:id="@+id/lesson_item_3"
+            <androidx.cardview.widget.CardView
+                android:id="@+id/card_lesson_3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:layout_marginBottom="24dp"
+                app:cardCornerRadius="16dp"
+                app:cardElevation="4dp">
+                <ImageView
+                    android:id="@+id/img_lesson_3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/img_mindmap_c3"/>
+            </androidx.cardview.widget.CardView>
+
+            <LinearLayout android:id="@+id/lesson_item_4"
                 style="@style/LessonItemStyle">
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -128,7 +165,24 @@
                     style="@style/LessonTextStyle" />
             </LinearLayout>
 
-            <LinearLayout android:id="@+id/lesson_item_4"
+            <androidx.cardview.widget.CardView
+                android:id="@+id/card_lesson_4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:layout_marginBottom="24dp"
+                app:cardCornerRadius="16dp"
+                app:cardElevation="4dp">
+                <ImageView
+                    android:id="@+id/img_lesson_4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/img_mindmap_c1"/>
+            </androidx.cardview.widget.CardView>
+
+            <LinearLayout android:id="@+id/lesson_item_5"
                 style="@style/LessonItemStyle">
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -143,6 +197,23 @@
                     android:text="Hệ thống lý thuyết C5"
                     style="@style/LessonTextStyle" />
             </LinearLayout>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/card_lesson_5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:layout_marginBottom="24dp"
+                app:cardCornerRadius="16dp"
+                app:cardElevation="4dp">
+                <ImageView
+                    android:id="@+id/img_lesson_5"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/img_mindmap_c1"/>
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
 
         <!-- Comment Section -->
