--- a/app/src/main/res/layout/activity_lab_drag.xml
+++ b/app/src/main/res/layout/activity_lab_drag.xml
@@ -1,46 +1,258 @@
 <!-- res/layout/activity_lab_drag.xml -->
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <io.github.sceneview.SceneView
-        android:id="@+id/sceneView"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
 
-    <!-- Thanh nút chọn model + Back -->
-    <LinearLayout
-        android:layout_width="match_parent" android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="end"
-        android:padding="12dp"
-        android:layout_gravity="top"
-        android:background="#33000000">
+        <io.github.sceneview.SceneView
+            android:id="@+id/sceneView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-        <Button
-            android:id="@+id/btnAmmeter"
+        <!-- Nút Xoá tất cả (trái, vertical center) -->
+
+
+        <FrameLayout
+            android:id="@+id/nav_button"
+            android:layout_width="wrap_content"
+            android:layout_height="250dp"
+            android:background="@drawable/title_panel_backround"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btnDeleteAll"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/button_outlined"
+                    android:paddingHorizontal="5dp"
+                    android:paddingVertical="8dp"
+                    android:text="Xoá tất cả"
+                    android:textSize="@dimen/text_answer"
+                    android:textColor="@android:color/white"
+                    app:layout_constraintBottom_toTopOf="@id/btnBack"
+                    app:layout_constraintEnd_toEndOf="@id/nav_button"
+                    app:layout_constraintStart_toStartOf="@id/nav_button"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:ignore="NotSibling" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btnBack"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/button_outlined"
+                    android:paddingVertical="8dp"
+                    android:text="Back"
+                    android:textSize="@dimen/text_answer"
+                    android:textColor="@android:color/white"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/btnDeleteAll"
+                    tools:ignore="NotSibling" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </FrameLayout>
+
+
+        <!-- Guideline dọc 70% (panel phải 30% width) -->
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline70w"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Ammeter" />
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.70" />
 
-        <Button
-            android:id="@+id/btnJet"
+        <!-- Hai guideline ngang để đạt 70% height (15%..85%) -->
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline15h"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Jet"
-            android:layout_marginStart="8dp" />
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.15" />
 
-        <Button
-            android:id="@+id/btnBG"
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline85h"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="BG"
-            android:layout_marginStart="8dp" />
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.85" />
 
-        <Button
-            android:id="@+id/btnBack"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Back"
-            android:layout_marginStart="8dp" />
-    </LinearLayout>
-</FrameLayout>
+        <!-- Panel chi tiết (phải, 30% width, 70% height) -->
+        <FrameLayout
+            android:id="@+id/panelDetails"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/title_panel_backround"
+            android:padding="12dp"
+            app:layout_constraintStart_toStartOf="@id/guideline70w"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/guideline15h"
+            app:layout_constraintBottom_toBottomOf="@id/guideline85h">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ScrollView
+                    android:id="@+id/scrollDetails"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toTopOf="@id/btnRow"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:paddingBottom="12dp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Chi tiết vật thể"
+                            android:textStyle="bold"
+                            android:textSize="18sp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Vị trí: x=0.0, y=0.0, z=0.0" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Kích thước: 1.0" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Góc quay: 0°" />
+                    </LinearLayout>
+                </ScrollView>
+
+                <!-- Hàng nút Hoàn tất & Xoá -->
+                <LinearLayout
+                    android:id="@+id/btnRow"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="end"
+                    android:paddingTop="8dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent">
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/btnDone"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Hoàn tất"
+                        android:background="@drawable/button_filled"
+                        android:textColor="@android:color/white" />
+
+                    <Space
+                        android:layout_width="8dp"
+                        android:layout_height="0dp" />
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/btnDelete"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Xoá"
+                        android:background="@drawable/button_outlined"
+                        android:textColor="@android:color/white" />
+                </LinearLayout>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </FrameLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!-- Bottom sheet “bookmark” (cần Material lib cho Behavior) -->
+    <FrameLayout
+        android:id="@+id/bottomSheet"
+        android:layout_width="match_parent"
+        android:layout_height="280dp"
+        android:background="@drawable/bottomsheet_background"
+        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
+        app:behavior_peekHeight="28dp"
+        app:behavior_hideable="false">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <!-- Bookmark handle -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="28dp"
+                android:gravity="center">
+
+                <View
+                    android:layout_width="50dp"
+                    android:layout_height="6dp"
+                    android:background="@drawable/handle_background" />
+            </LinearLayout>
+
+            <!-- Dãy icon model ngang -->
+            <HorizontalScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fillViewport="true"
+                android:padding="12dp"
+                android:scrollbars="none">
+
+                <LinearLayout
+                    android:id="@+id/modelTray"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical">
+
+                    <ImageButton
+                        android:id="@+id/btnModelCube"
+                        android:layout_width="64dp"
+                        android:layout_height="64dp"
+                        android:background="@drawable/icon_background"
+                        android:contentDescription="Cube"
+                        android:src="@drawable/ic_cube" />
+
+                    <ImageButton
+                        android:id="@+id/btnModelSphere"
+                        android:layout_width="64dp"
+                        android:layout_height="64dp"
+                        android:background="@drawable/icon_background"
+                        android:contentDescription="Sphere"
+                        android:src="@drawable/ic_sphere" />
+
+                    <ImageButton
+                        android:id="@+id/btnModelCylinder"
+                        android:layout_width="64dp"
+                        android:layout_height="64dp"
+                        android:background="@drawable/icon_background"
+                        android:contentDescription="Cylinder"
+                        android:src="@drawable/ic_cylinder" />
+                </LinearLayout>
+            </HorizontalScrollView>
+        </LinearLayout>
+    </FrameLayout>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
