--- a/app/src/main/res/layout/fragment_mind_map.xml
+++ b/app/src/main/res/layout/fragment_mind_map.xml
@@ -132,22 +132,22 @@
                     style="@style/LessonTextStyle" />
             </LinearLayout>
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/card_lesson_3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:layout_marginBottom="24dp"
-                app:cardCornerRadius="16dp"
-                app:cardElevation="4dp">
-                <ImageView
-                    android:id="@+id/img_lesson_3"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/img_mindmap_c3"/>
-            </androidx.cardview.widget.CardView>
+<!--            <androidx.cardview.widget.CardView-->
+<!--                android:id="@+id/card_lesson_3"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:visibility="gone"-->
+<!--                android:layout_marginBottom="24dp"-->
+<!--                app:cardCornerRadius="16dp"-->
+<!--                app:cardElevation="4dp">-->
+<!--                <ImageView-->
+<!--                    android:id="@+id/img_lesson_3"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:adjustViewBounds="true"-->
+<!--                    android:scaleType="fitCenter"-->
+<!--                    android:src="@drawable/img_mindmap_c2"/>-->
+<!--            </androidx.cardview.widget.CardView>-->
 
             <LinearLayout android:id="@+id/lesson_item_4"
                 style="@style/LessonItemStyle">
@@ -165,22 +165,22 @@
                     style="@style/LessonTextStyle" />
             </LinearLayout>
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/card_lesson_4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:layout_marginBottom="24dp"
-                app:cardCornerRadius="16dp"
-                app:cardElevation="4dp">
-                <ImageView
-                    android:id="@+id/img_lesson_4"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/img_mindmap_c1"/>
-            </androidx.cardview.widget.CardView>
+<!--            <androidx.cardview.widget.CardView-->
+<!--                android:id="@+id/card_lesson_4"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:visibility="gone"-->
+<!--                android:layout_marginBottom="24dp"-->
+<!--                app:cardCornerRadius="16dp"-->
+<!--                app:cardElevation="4dp">-->
+<!--                <ImageView-->
+<!--                    android:id="@+id/img_lesson_4"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:adjustViewBounds="true"-->
+<!--                    android:scaleType="fitCenter"-->
+<!--                    android:src="@drawable/img_mindmap_c1"/>-->
+<!--            </androidx.cardview.widget.CardView>-->
 
             <LinearLayout android:id="@+id/lesson_item_5"
                 style="@style/LessonItemStyle">
@@ -198,56 +198,59 @@
                     style="@style/LessonTextStyle" />
             </LinearLayout>
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/card_lesson_5"
+<!--            <androidx.cardview.widget.CardView-->
+<!--                android:id="@+id/card_lesson_5"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:visibility="gone"-->
+<!--                android:layout_marginBottom="24dp"-->
+<!--                app:cardCornerRadius="16dp"-->
+<!--                app:cardElevation="4dp">-->
+<!--                <ImageView-->
+<!--                    android:id="@+id/img_lesson_5"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:adjustViewBounds="true"-->
+<!--                    android:scaleType="fitCenter"-->
+<!--                    android:src="@drawable/img_mindmap_c1"/>-->
+<!--            </androidx.cardview.widget.CardView>-->
+
+            <!-- Comment Section -->
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:layout_marginBottom="24dp"
-                app:cardCornerRadius="16dp"
-                app:cardElevation="4dp">
-                <ImageView
-                    android:id="@+id/img_lesson_5"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/img_mindmap_c1"/>
-            </androidx.cardview.widget.CardView>
-        </LinearLayout>
-
-        <!-- Comment Section -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical"
-            android:padding="12dp">
-
-            <LinearLayout
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:background="@drawable/circle_red_background"
-                android:layout_marginEnd="10dp"
-                android:gravity="center">
-                <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:src="@drawable/ic_mail" />
-            </LinearLayout>
-
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="Bình luận..."
-                android:textSize="16sp"
-                android:textColorHint="@color/black"
-                android:textStyle="italic|bold"
+                android:orientation="horizontal"
                 android:gravity="center_vertical"
-                android:padding="15dp"
-                android:background="@drawable/button_white_background"/>
+                android:padding="12dp">
+
+                <LinearLayout
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:background="@drawable/circle_red_background"
+                    android:layout_marginEnd="10dp"
+                    android:gravity="center">
+                    <ImageView
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:src="@drawable/ic_mail" />
+                </LinearLayout>
+
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="Bình luận..."
+                    android:textSize="16sp"
+                    android:textColorHint="@color/black"
+                    android:textStyle="italic|bold"
+                    android:gravity="center_vertical"
+                    android:padding="15dp"
+                    android:background="@drawable/button_white_background"/>
+            </LinearLayout>
         </LinearLayout>
+
+
+
 
     </LinearLayout>
 </ScrollView>
