--- a/app/src/main/res/layout/fragment_virtual_lab.xml
+++ b/app/src/main/res/layout/fragment_virtual_lab.xml
@@ -1,65 +1,78 @@
-<?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- res/layout/fragment_virtual_lab.xml -->
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient_green_background">
 
+    <!-- Header -->
     <LinearLayout
-        android:layout_width="match_parent"
+        android:id="@+id/header"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="16dp">
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:padding="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/btn_back"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/ic_back"
+            app:tint="@color/green_600" />
+
+        <TextView
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:layout_marginStart="8dp"
+            android:text="PHÒNG THÍ NGHIỆM ẢO"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:textColor="@color/green_700"
+            android:layout_weight="1" />
+
+        <!-- Nút Bản sao -->
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnClone"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:background="@android:color/transparent"
+            android:paddingHorizontal="12dp"
+            android:text="Bản sao"
+            android:textSize="10sp"
+            android:textColor="@color/blue_700"
+            android:textStyle="bold"
+            android:drawableStart="@drawable/ic_link"
+            android:drawablePadding="8dp"
             android:gravity="center_vertical"
-            android:layout_marginBottom="5dp">
+            android:contentDescription="Bản sao" />
 
-            <ImageView
-                android:id="@+id/btn_back"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@drawable/ic_back"
-                android:layout_marginEnd="8dp"
-                app:tint="@color/green_600" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="PHÒNG THÍ NGHIỆM ẢO"
-                android:textSize="15sp"
-                android:textStyle="bold"
-                android:textColor="@color/green_700" />
-
-        </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="#CBFFE7"
-            android:layout_marginBottom="25dp"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <Button
-                android:id="@+id/new_lab"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="Thí nghiệm mới"/>
-
-            <Button
-                android:id="@+id/A_lab"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="Thí nghiệm A"/>
-        </LinearLayout>
 
     </LinearLayout>
-</ScrollView>
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="0dp"
+        android:layout_height="2dp"
+        android:background="#CBFFE7"
+        app:layout_constraintTop_toBottomOf="@id/header"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- RecyclerView TỰ SCROLL, KHÔNG đặt trong ScrollView -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvLabs"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:padding="16dp"
+        android:clipToPadding="false"
+        app:layout_constraintTop_toBottomOf="@id/divider"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
