--- a/app/src/main/res/layout/dialog_paste_link.xml
+++ b/app/src/main/res/layout/dialog_paste_link.xml
@@ -16,7 +16,7 @@
         android:id="@+id/edtLink"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="https://..."
+        android:hint="vatlythongminh//..."
         android:inputType="textUri" />
 
     <LinearLayout
