--- a/app/src/main/res/layout/activity_lab_custom.xml
+++ b/app/src/main/res/layout/activity_lab_custom.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -13,19 +14,19 @@
             android:id="@+id/sceneView"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:background="@drawable/headersheet_background"
             android:gravity="center_vertical"
+            android:orientation="horizontal"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:background="@drawable/headersheet_background">
+            app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
                 android:id="@+id/btnBack"
@@ -33,45 +34,45 @@
                 android:layout_height="30dp"
                 android:layout_marginStart="20dp"
                 android:src="@drawable/ic_back"
-                app:tint="@color/green_600"/>
+                app:tint="@color/green_600" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="THÍ NGHIỆM MỚI"
                 android:layout_marginStart="20dp"
+                android:text="THÍ NGHIỆM A"
+                android:textColor="@color/green_700"
                 android:textSize="15sp"
-                android:textStyle="bold"
-                android:textColor="@color/green_700" />
+                android:textStyle="bold" />
 
             <View
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_weight="1"/>
+                android:layout_weight="1" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btnShare"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/button_outlined"
-                android:layout_marginEnd="20dp"
                 android:layout_marginVertical="5dp"
-                android:text="Chia sẻ"
-                android:textSize="@dimen/text_answer"
+                android:layout_marginEnd="20dp"
+                android:background="@drawable/button_outlined"
                 android:drawableStart="@drawable/ic_share"
-                android:textColor="@android:color/white"/>
+                android:text="Chia sẻ"
+                android:textColor="@android:color/white"
+                android:textSize="@dimen/text_answer" />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btnDeleteAll"
+                android:id="@+id/btnRefresh"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/button_outlined"
-                android:layout_marginEnd="20dp"
                 android:layout_marginVertical="5dp"
-                android:text="Xoá tất cả"
-                android:textSize="@dimen/text_answer"
-                android:drawableStart="@drawable/ic_trash"
-                android:textColor="@android:color/white"/>
+                android:layout_marginEnd="20dp"
+                android:background="@drawable/button_outlined"
+                android:drawableStart="@drawable/ic_refresh"
+                android:text="Thử lại"
+                android:textColor="@android:color/white"
+                android:textSize="@dimen/text_answer" />
 
         </LinearLayout>
 
@@ -103,10 +104,10 @@
             android:background="@drawable/title_panel_backround"
             android:padding="12dp"
             android:visibility="gone"
-            app:layout_constraintStart_toStartOf="@id/guideline75w"
+            app:layout_constraintBottom_toBottomOf="@id/guideline75h"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/guideline25h"
-            app:layout_constraintBottom_toBottomOf="@id/guideline75h">
+            app:layout_constraintStart_toStartOf="@id/guideline75w"
+            app:layout_constraintTop_toTopOf="@id/guideline25h">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -126,9 +127,9 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:text="Chi tiết vật thể"
+                        android:textColor="@color/white"
                         android:textSize="18sp"
-                        android:textStyle="bold"
-                        android:textColor="@color/white"/>
+                        android:textStyle="bold" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -141,15 +142,15 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Tên vật thể: "
-                            android:textStyle="bold"
-                            android:textColor="@color/white"/>
+                            android:textColor="@color/white"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/item_name"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="2dp"
-                            android:textColor="@color/white"/>
+                            android:textColor="@color/white" />
 
                     </LinearLayout>
 
@@ -160,20 +161,20 @@
                     android:id="@+id/btnRow"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
                     android:gravity="end"
+                    android:orientation="horizontal"
                     android:paddingTop="8dp"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent">
+                    app:layout_constraintStart_toStartOf="parent">
 
                     <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/btnDone"
+                        android:id="@+id/btnShow"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Hoàn tất"
                         android:background="@drawable/button_filled"
+                        android:text="Bố trí"
                         android:textColor="@android:color/white" />
 
                     <Space
@@ -181,12 +182,12 @@
                         android:layout_height="0dp" />
 
                     <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/btnDelete"
+                        android:id="@+id/btnHide"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Xoá"
                         android:background="@drawable/button_outlined"
+                        android:text="Tạm ẩn"
                         android:textColor="@android:color/white" />
                 </LinearLayout>
 
